# BigData_Sci

./: .env.example  .gitignore  README.md  pyproject.toml
demos/: openalex_cli_patch.py  patch_openalex_windows.py  patch_openalex_windows_optimized.py  test_openalex_cli_10k.py
demos/agent_min_demo/: agent.py  app.py  poetry_skill.py  tools.py
demos/embedding_demo/: .env.news_pipeline.example  news_pipeline_demo.py  news_pipeline_demo_README.md  news_pipeline_excel_aligned_README.md
demos/openalex_python_elt_demo/: __init__.py
demos/openalex_python_elt_demo/common/: __init__.py
demos/openalex_python_elt_demo/module_ELT/: README.md  __init__.py  config.py  main.py  requirements.txt
demos/openalex_python_elt_demo/module_data_sync/: QUICKSTART.md  README.md  config.yaml  es_bulk_test.py  requirements.txt  (+1 more)
docs/: openalex_budget_and_batch_bfs_design.md  openalex_cli_bfs_design.md  openalex_metadata_fetch_benchmark_report.md  research_agent_demo_usage.md  stage1_diff1.md
scripts/: export_mysql_tables_to_csv.md  export_mysql_tables_to_csv.py  openalex_elt_cli.md  openalex_elt_cli.py  openalex_elt_cli_exp.ps1  run_research_agent_demo.py
src/research_agent/: __init__.py
tests/: test_core_contracts.py  test_neo4j_sync_safe_props.py  test_openalex_api_bulk_source.py  test_openalex_cli_source_planner.py  test_openalex_elt_cli.py  test_openalex_entity_store.py  test_openalex_source.py  test_query_planner.py  test_report_writer.py  test_runtime_agent.py  test_runtime_runner.py  test_scholarly_graph_rag.py
tests/benchmarks/: __init__.py  config.py  runner.py
(+135 files in other folders)
